--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
            </div>
        </div>
        <div class="hero-products">
-           <img src="images/hero-products.png" alt="">
+           <img src=".images/hero-products.png" alt="">
        </div>
    </div>
 
@@ -64,7 +64,7 @@
    <section class="benefits" id="benefits">
        <div class="benefit">
            <div class="icon">
-               <img src="/images/oad-ikoon.svg" alt="Kakaoubade ikoon">
+               <img src="/.images/oad-ikoon.svg" alt="Kakaoubade ikoon">
            </div>
            <div class="content">
                <h4>Kvaliteetne kakao</h4>
@@ -73,7 +73,7 @@
        </div>
        <div class="benefit">
            <div class="icon">
-               <img src="/images/kommid-ikoon.svg" alt="Kommide ikoon">
+               <img src="/.images/kommid-ikoon.svg" alt="Kommide ikoon">
            </div>
            <div class="content">
                <h4>Rikkalik maitse</h4>
@@ -82,7 +82,7 @@
        </div>
        <div class="benefit">
            <div class="icon">
-               <img src="/images/sudamed-ikoon.svg" alt="südamete ikoon">
+               <img src="/.images/sudamed-ikoon.svg" alt="südamete ikoon">
            </div>
            <div class="content">
                <h4>Meistrite käsitöö</h4>
@@ -115,7 +115,7 @@
 
                    <div class="slider-image">
                        <div class="image">
-                           <img src="/images/piparmunt.png" alt="piparmünditäidisega kommid">
+                           <img src="./images/piparmunt.png" alt="piparmünditäidisega kommid">
                        </div>
                    </div>
                </label>
@@ -126,7 +126,7 @@
 
                    <div class="slider-image">
                        <div class="image">
-                           <img src="/images/vaarikas.png" alt="vaarikatäidisega kommid">
+                           <img src="./images/vaarikas.png" alt="vaarikatäidisega kommid">
                        </div>
                    </div>
                </label>
@@ -137,7 +137,7 @@
 
                    <div class="slider-image">
                        <div class="image">
-                           <img src="/images/karamell.png" alt="karamellitäidisega kommid">
+                           <img src="./images/karamell.png" alt="karamellitäidisega kommid">
                        </div>
                    </div>
                </label>
@@ -148,7 +148,7 @@
 
                    <div class="slider-image">
                        <div class="image">
-                           <img src="/images/pistaatsia.png" alt="pistaatsiatäidisega kommid">
+                           <img src="./images/pistaatsia.png" alt="pistaatsiatäidisega kommid">
                        </div>
                    </div>
                </label>
@@ -159,7 +159,7 @@
 
                    <div class="slider-image">
                        <div class="image">
-                           <img src="/images/maasikas.png" alt="maasikatäidisega kommid">
+                           <img src="./images/maasikas.png" alt="maasikatäidisega kommid">
                        </div>
                    </div>
                </label>
@@ -177,8 +177,8 @@
            <button class="tertiary-btn">Loe lähemalt &gt;</button>
        </div>
        <div class="about-images">
-           <img src="/images/choco1.jpg" alt="sulav šokolaad" class="top-image">
-           <img src="/images/chips.jpg" alt="šokolaadi kommid" class="bottom-image">
+           <img src="./images/choco1.jpg" alt="sulav šokolaad" class="top-image">
+           <img src="./images/chips.jpg" alt="šokolaadi kommid" class="bottom-image">
        </div>
    </section>
 
@@ -194,8 +194,8 @@
                <button class="tertiary-btn">Loe lähemalt &gt;</button>
            </div>
            <div class="about-candies-images">
-               <img src="/images/kulp.jpg" alt="šokolaadi kommid puidust lusikal" class="top-image">
-               <img src="/images/cocoa-gray.jpg" alt="kakaooad ja kakaopulber laual" class="bottom-image">
+               <img src="./images/kulp.jpg" alt="šokolaadi kommid puidust lusikal" class="top-image">
+               <img src="./images/cocoa-gray.jpg" alt="kakaooad ja kakaopulber laual" class="bottom-image">
            </div>
        </div>
    </section>
@@ -205,22 +205,22 @@
    <h2>Retseptikogumik</h2>
    <div class="recipes">
      <div class="recipe">
-       <img src="/images/chip-cookies.jpg" alt="Ameerika šokolaadiküpsised">
+       <img src="./images/chip-cookies.jpg" alt="Ameerika šokolaadiküpsised">
        <div class="overlay"></div>
        <p>Ameerika šokolaadiküpsised &gt;</p>
      </div>
      <div class="recipe">
-       <img src="/images/banana-bread.jpg" alt="Šokolaaditükkidega banaanileib">
+       <img src="./images/banana-bread.jpg" alt="Šokolaaditükkidega banaanileib">
        <div class="overlay"></div>
        <p>Šokolaaditükkidega banaanileib &gt;</p>
      </div>
      <div class="recipe">
-       <img src="/images/brownie.jpg" alt="Šokolaaditükkidega brownie">
+       <img src="./images/brownie.jpg" alt="Šokolaaditükkidega brownie">
        <div class="overlay"></div>
        <p>Šokolaaditükkidega brownie &gt;</p>
    </div>
    <div class="recipe">
-       <img src="/images/muffs.jpg" alt="Šokolaaditükkidega muffinid">
+       <img src="./images/muffs.jpg" alt="Šokolaaditükkidega muffinid">
        <div class="overlay"></div>
        <p>Šokolaaditükkidega muffinid &gt;</p>
    </div>
@@ -289,7 +289,7 @@
 <!--footer-->
    <footer>
    <div class="footer-top">
-     <div class="logo"><img src="/images/choco-logo.svg" alt="Choca logo"></div>
+     <div class="logo"><img src="./images/choco-logo.svg" alt="Choca logo"></div>
      <div class="newsletter">
        <p class="newsletter-text">Magusad üllatused on vaid ühe sammu kaugusel – telli uudiskiri ja need otse meilile!</p>
        <form>
@@ -316,9 +316,9 @@
      <p>Copyright © 2025. All Rights Reserved.</p>
    </div>
    <div class="social-icons">
-     <a href="#"><img src="/images/facebook-logo.svg" alt="Facebook"></a>
-     <a href="#"><img src="/images/instagram-logo.svg" alt="Instagram"></a>
-     <a href="#"><img src="/images/linkedin-logo.svg" alt="LinkedIn"></a>
+     <a href="#"><img src="./images/facebook-logo.svg" alt="Facebook"></a>
+     <a href="#"><img src="./images/instagram-logo.svg" alt="Instagram"></a>
+     <a href="#"><img src="./images/linkedin-logo.svg" alt="LinkedIn"></a>
    </div>
    </footer> 
 
