--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
            </nav>
            <!--logo-->
            <a href="#home" class="navbar-logo">
-               <img src="/images/choco-logo.svg" alt="Choca">
+               <img src="./images/choco-logo.svg" alt="Choca">
            </a>
-           <!--off-screen menu and hamburger icon for mobile -->
+           <!--off-screen menu ands hamburger icon for mobile -->
            <div class="mobile-nav">
                <div class="ham-menu"><span></span> <span></span> <span></span></div>
                <div class="off-screen-menu"> <span class="close-btn">×</span>
