--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
            </div>
        </div>
        <div class="hero-products">
-           <img src=".images/hero-products.png" alt="">
+           <img src="./images/hero-products.png" alt="">
        </div>
    </div>
 
@@ -64,7 +64,7 @@
    <section class="benefits" id="benefits">
        <div class="benefit">
            <div class="icon">
-               <img src="/.images/oad-ikoon.svg" alt="Kakaoubade ikoon">
+               <img src="./images/oad-ikoon.svg" alt="Kakaoubade ikoon">
            </div>
            <div class="content">
                <h4>Kvaliteetne kakao</h4>
@@ -73,7 +73,7 @@
        </div>
        <div class="benefit">
            <div class="icon">
-               <img src="/.images/kommid-ikoon.svg" alt="Kommide ikoon">
+               <img src="./images/kommid-ikoon.svg" alt="Kommide ikoon">
            </div>
            <div class="content">
                <h4>Rikkalik maitse</h4>
@@ -82,7 +82,7 @@
        </div>
        <div class="benefit">
            <div class="icon">
-               <img src="/.images/sudamed-ikoon.svg" alt="südamete ikoon">
+               <img src="./images/sudamed-ikoon.svg" alt="südamete ikoon">
            </div>
            <div class="content">
                <h4>Meistrite käsitöö</h4>
