--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
        <div class="content">
            <h1>Elu magusamad hetked jäta Choca hooleks</h1>
            <div>
-            <button class="primary-btn">Tutvu kollektsiooniga</button>
-            <button class="secondary-btn">Loe meist lähemalt</button>            
+            <button class="primary-btn" onclick="scrollToSection('collection')">Tutvu kollektsiooniga</button>
+            <button class="secondary-btn"onclick="scrollToSection('about')">Loe meist lähemalt</button>            
            </div>
        </div>
        <div class="hero-products">
